@@ -35,6 +35,7 @@ Version 1.6.9.1
 	- Replace PROTO_TLS by PROTO_CDISCOUNT
 	- Replace PROTO_YAHOOGAMES by PROTO_ALLOCINE
 	- Replace PROTO_COTENDO by PROTO_FRANCETVINFO
+	- Replace PROTO_VOXTEL by PROTO_STACKPATH
 
 
 ## Version 1.6.9.0
